bk_ida/gccida/g2/push_init_level
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:5746:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *inited; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:5748:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:5754:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:5765:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:5771:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:5785:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *name; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:5798:9: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
while ( constructor_stack_0->implicit ) 
        ^~~~~~~~~~~~~~~~~~~
        constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:5871:7: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
v15 = constructor_stack_0; 
      ^~~~~~~~~~~~~~~~~~~
      constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:5874:1: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
constructor_stack_0 = v6; 
^~~~~~~~~~~~~~~~~~~
constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:5877:21: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
constructor_depth = spelling_0 - spelling_base; 
                    ^~~~~~~~~~
                    spelling
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:5884:7: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
v16 = constructor_range_stack_0; 
      ^~~~~~~~~~~~~~~~~~~~~~~~~
      constructor_range_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:5886:1: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
constructor_range_stack_0 = 0LL; 
^~~~~~~~~~~~~~~~~~~~~~~~~
constructor_range_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:5989:20: error: expected expression
v21 = ( tree_node *)*( &global_trees + 17); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:5989:9: error: use of undeclared identifier 'tree_node'
v21 = ( tree_node *)*( &global_trees + 17); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:5993:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v20 = ( tree)v19[7]; 
             ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:6031:20: error: expected expression
v27 = ( tree_node *)*( &global_trees + 17); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/c-typeck.c:6031:9: error: use of undeclared identifier 'tree_node'
v27 = ( tree_node *)*( &global_trees + 17); 
        ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_init_level/src/obj/c-typeck.o] Error 1
